--- a/.github/workflows/build-binaries.yml
+++ b/.github/workflows/build-binaries.yml
@@ -73,13 +73,13 @@ jobs:
         if: ${{ runner.os != 'Windows' }}
         run: utils/gh-build-binaries.sh "${{ matrix.debug }}" ${{ runner.os }}
       - name: Upload tar-ball to Bintray
-        uses: reznikmm/upload-bintray-action@v3
+        uses: reznikmm/upload-bintray-action@master
         with:
           subject: reznikmm
           username: reznikmm
           repository: libadalang
           package: libadalang
-          version: 0.1-git
+          version: 0.2-git
           sourcePath: '*.tar.gz'
           override: 1
           apiKey: ${{secrets.BINTRAY_API_KEY}}
